src/tests/fixtures/field_definitions/PropertyFieldMissingType.invalid.ts.expected
-----------------
INPUT
----------------- 
/** @GQLType */
class Query {
  /** @GQLField */
  someProp;
}

-----------------
OUTPUT
-----------------
Error: Expected GraphQL field to have a type.:
 --> src/tests/fixtures/field_definitions/PropertyFieldMissingType.invalid.ts:4:3

  |   /** @GQLField */
4 |   someProp;
  |   ^^^^^^^^ 
  | }
