src/tests/fixtures/field_definitions/PropertyFieldMissingType.invalid.ts
/** @GQLType */
class Query {
  /** @GQLField */
  someProp;
}
